fixing faq bug and better css on collapse

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -158,6 +158,8 @@ p {
 	nav {
 		top:15px;
 	}
+	margin-bottom: 3em;
+	
 	li.active a {
 		font-weight:bold;
 		font-family: "Apercu Bold", Helvetica, sans-serif;
